added content to handlebars

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,10 +1,21 @@
 <h1>Home page!</h1>
-
-{{#each pets}}
-    <div class="card">
-        <h3>{{name}}</h3>
-        <h4>Owner: {{User.username}}</h4>
-        <h5>Species: {{species}}</h5>
-        <p>age: {{age}}</p>
-    </div>
-{{/each}}
+<Div class="chess-piece-picture">
+    <img src="" alt="">
+</Div>
+<Div id="login-signup-form">
+    <form id="login-form">
+        <h2>Login</h2>
+        <input type="text" id="email-login" value="email"> <br>
+        <input type="text" id="password-login" value="password">
+    </form>
+    <form id="signup-form">
+        <h2>Sign Up</h2>
+        <input type="text" id="username-signup"> <br>
+        <input type="text" id="email-signup"> <br>
+        <input type="text" id="password-signup">
+    </form>
+</Div>
+<Div class="chess-piece-picture">
+    <img src="" alt="">
+</Div>
+<script src="../public/js/login.js"></script>
