adding the friend modal and button

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -7,8 +7,8 @@
                     <h5>Wins: {{wins}}</h5>
                     <p>Loses: {{loses}}</p>
                     <p>Ties: {{ties}}</p>
-                    <p>Win/loss: {{losses}}/ {{losses}}</p>
-                    <button>PLAY GAME</button>
+                    <p>Win/loss: {{winloss}}</p>
+                    <button id="play-btn">PLAY GAME</button>
                     <button>Notification icon</button>
                 </div>
         </div>
