--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,25 +1,49 @@
 <div class ="container">
-    <div class = "row">
-        <div class="col-8">
-                <div class="card">
-                    <h1>{{username}}</h1>
-                    <h3>Total Games Played: {{games}}</h3>
-                    <h5>Wins: {{wins}}</h5>
-                    <p>Loses: {{loses}}</p>
-                    <p>Ties: {{ties}}</p>
-                    <p>Win/loss: {{winloss}}</p>
-                    <button id="play-btn">PLAY GAME</button>
-                    <button>Notification icon</button>
-                </div>
-        </div>
-
-        <div class="col-4">
-            <ul>
-            {{#each friend}}
-            <li>{{friend_name}}</li>
-            {{/each}}
-            </ul>
-            <button>Add Friend</button>
+        <div class = "row">
+            <div class="col-8">
+                    <div class="card">
+                        <h1>{{username}}</h1>
+                        <h3>Total Games Played: {{games}}</h3>
+                        <h5>Wins: {{wins}}</h5>
+                        <p>Loses: {{loses}}</p>
+                        <p>Ties: {{ties}}</p>
+                        <p>Win/loss: {{winloss}}</p>
+                        <button id="play-btn">PLAY GAME</button>
+                        <button id="notification-btn">Notification icon</button>
+                    </div>
+            </div>
+    
+            <div class="col-4">
+                <ul>
+                {{#each friend}}
+                <li>{{friend_name}}</li>
+                {{/each}}
+                </ul>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    Add Friend
+                </button>
+            </div>
         </div>
     </div>
-</div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add a Friend</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Enter your friend's email:</p>
+                    <input type="text" id="friend-email" value="friends email">
+                    <button type="button" class="btn btn-primary" id="add-friend-btn">Add Friend</button>
+                    <p>Friend Request Sent!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
