finished foundation of start game and back from lobby routes

--- a/views/lobby.handlebars
+++ b/views/lobby.handlebars
@@ -11,4 +11,5 @@
     <button id="start-btn">Start</button>
     <button id="back-btn">Back</button>
 </div>
+{{!-- TODO: make sure the src below is correct --}}
 <script src="../public/js/lobby.js"></script>
