added sockets for listening to the user page on the client

--- a/views/game-board.handlebars
+++ b/views/game-board.handlebars
@@ -9,3 +9,6 @@
     </div>
 </div>
 <div id="game-board"></div>
+<script src="/socket.io/socket.io.js"></script>
+{{!-- TODO: make sure the src below is correct --}}
+<script src="../public/js/game-board.js"></script>
