--- a/views/lobby.handlebars
+++ b/views/lobby.handlebars
@@ -11,5 +11,6 @@
     <button id="start-btn">Start</button>
     <button id="back-btn">Back</button>
 </div>
+<script src="/socket.io/socket.io.js"></script>
 {{!-- TODO: make sure the src below is correct --}}
 <script src="../public/js/lobby.js"></script>
