--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -76,5 +76,6 @@
             </div>
         </div>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
     {{!-- TODO: make sure the src below is correct --}}
     <script src="/public/js/user.js"></script>
