--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,21 +1,41 @@
-<h1>Let's play Chess!</h1>
-<Div class="chess-piece-picture">
-    <img src="" alt="">
-</Div>
-<Div id="login-signup-form">
-    <form id="login-form">
-        <h2>Login</h2>
-        <input type="text" id="email-login" value="email"> <br>
-        <input type="text" id="password-login" value="password">
-    </form>
-    <form id="signup-form">
-        <h2>Sign Up</h2>
-        <input type="text" id="username-signup"> <br>
-        <input type="text" id="email-signup"> <br>
-        <input type="text" id="password-signup">
-    </form>
-</Div>
-<Div class="chess-piece-picture">
-    <img src="" alt="">
-</Div>
-<script src="../public/js/login.js"></script>
+<div class="container">
+        <h1 class="font-effect-shadow-multiple"> Let's play Chess!</h1>
+        <div class = "row">
+            <div class="chess-piece-picture col-3" id="left-image">
+                <img src="./assets/image (1).png" class="img-fluid" alt="Responsive image">
+            </div>
+            <div class="col-1"></div>
+            <div class = "col-4" id="form">
+                <form id="login-form" class="rounded">
+                    <h2>Log In</h2>
+
+                    <label for="emaillogin" class="form-label">Email address</label>
+                    <input type="text" class="form-control" id="email-login" placeholder = "email">
+
+                    <label for="passwordlogin" class="form-label">Password</label>
+                    <input type="text" class="form-control" id="password-login" placeholder ="password">
+
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">Log In</button>
+                </form>
+                <form id="signup-form">
+                    <h2>Sign Up</h2>
+
+                    <label for="emailsignup" class="form-label">Email address</label>
+                    <input type="text" class="form-control" id="email-signup" placeholder = "email">
+
+                    <label for="usernamesignup" class="form-label">User name</label>
+                    <input type="text" class="form-control" id="username-signup" placeholder = "email">
+
+                    <label for="passwordsignup" class="form-label">Password</label>
+                    <input type="text" class="form-control" id="password-signup" placeholder ="password">
+
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">Sign Up</button>
+                </form>
+            </div>
+            <div class="col-1"></div>
+            <div class="chess-piece-picture col-3" id="right-image">
+                <img src="./assets/image.png" class="img-fluid" alt="Responsive image">
+            </div>
+        </div>
+    </div>
+<script src="/js/login.js"></script>
