--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -38,4 +38,5 @@
             </div>
         </div>
     </div>
+<script src="/socket.io/socket.io.js"></script>
 <script src="/js/login.js"></script>
