finished signup route

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -3,9 +3,9 @@
             <div class="col-8">
                     <div class="card">
                         <h1>{{username}}</h1>
-                        <h3>Total Games Played: {{games}}</h3>
+                        <h3>Total Games Played: {{ngames}}</h3>
                         <h5>Wins: {{wins}}</h5>
-                        <p>Loses: {{loses}}</p>
+                        <p>Losses: {{losses}}</p>
                         <p>Ties: {{ties}}</p>
                         <p>Win/loss: {{winloss}}</p>
                         <button id="play-btn">PLAY GAME</button>
