--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,9 @@
     --red:  rgba(255, 0, 0, 0.623);
     --black:  black;
     --brown:  #774000d8;
+    --purple: rgb(52, 7, 90);
+    --green1: rgba(47, 194, 47, 0.753);
+    --blueish: rgb(9, 139, 133);
 }
 
 body {
@@ -26,11 +29,24 @@ h1 {
 }
 h2 {
     text-align: center;
+    margin-top: 25px;
+    margin-bottom: 20px;
+    
 }
-
+h3{
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
 .container {
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+#userpage-container {
+    position: absolute;
+    left: 17%;
+    top: 20%;
 }
 
 img {
@@ -57,6 +73,83 @@ img {
     padding: 5px;
     border-radius: 5px;
 }
+#users {
+    font-weight: bolder;
+    color: var(--purple);
+}
+#username {
+    font-size: 50px;
+    font-weight: bolder;
+    text-align: center;
+    letter-spacing: 1px;
+}
+#lobby-page{
+    background-color: var(--brown);
+    margin-top: 150px;
+    
+}
+/* #host-username {
+    text-align: center;
+} */
+/* #add-friend {
+    margin-left: 300px;
+    margin-right: 300px;
+    height: 50px;
+} */
+
+#friends-box{
+    background-color: var(--blue);
+    border-radius: 5px;
+}
+
+.friends-list{
+    background-color: greenyellow;
+    font-weight: bolder;
+    text-align: center;
+}
+/* .list-group-item:hover{
+    background-color: ivory;
+} */
+#invite-friend-btn {
+    margin-left: 300px;
+    margin-right: 300px;
+    height: 50px;
+}
+#start-btn {
+    margin-left: 300px;
+    margin-right: 300px;
+    height: 50px;
+    background-color: var(--green);
+}
+#back-btn {
+    margin-left: 300px;
+    margin-right: 300px;
+    height: 50px;
+    background-color: var(--red);
+}
+/* .notification {
+    background-color: #555;
+    color: white;
+    text-decoration: none;
+    padding: 15px 26px;
+    position: relative;
+    display: inline-block;
+    border-radius: 2px;
+}
+
+.notification:hover {
+background: red;
+}
+
+.notification .badge {
+position: absolute;
+top: -10px;
+right: -10px;
+padding: 5px 10px;
+border-radius: 50%;
+background: red;
+color: white;
+} */
 
 @keyframes circle {
     0% {
