--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -40,3 +40,5 @@
     </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/login.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
