--- a/views/lobby.handlebars
+++ b/views/lobby.handlebars
@@ -1,16 +1,30 @@
-<div id="host-slot">
-    <h2>{{host_username}}</h2>
-    <h4>White</h4>
-</div>
-<div id="joining-slot">
-    <h2>{{opponent_username}}</h2>
-    <h4>Black</h4>
-    <button id="invite-friend-btn">Invite</button>
-</div>
-<div id="buttons">
-    <button id="start-btn">Start</button>
-    <button id="back-btn">Back</button>
-</div>
+<div class="container border border-primary rounded-lg" id="lobby-page">
+        <form id="login-form" class="rounded mt-5 mb-5 mr-5 ml-5">
+
+            <h2 id="users">{{host_username}}</h2>
+            <h3>White</h3>
+            <input type="text" class="form-control-lg col-md-6 offset-md-3" id="host-username" placeholder = "Enter your username">
+
+            <!-- <h2></h2> -->
+            <h2 id="users">{{opponent_username}}</h2>
+            <h3>Black</h3>
+            <input type="text" class="form-control-lg col-md-6 offset-md-3 mb-5" id="friend-username" placeholder ="Enter your Friend's Username">
+
+            
+        </form>
+
+        <div class="row" id="buttons">
+            <button type="submit" class="col btn btn-primary btn-lg mt-3 mb-3" id="invite-friend-btn"> Invite Friend </button>
+        </div>
+        <div class="row" id="buttons">
+            <button type="submit" class="col btn btn-success btn-lg mt-3 mb-3" id="start-btn"> Start </button>
+        </div>
+        <div class="row" id="buttons">
+            <button type="submit"  class="col btn btn-danger btn-lg mt-3 mb-5" id="back-btn"> Back </button>
+        </div>
+    </div>
 <script src="/socket.io/socket.io.js"></script>
 {{!-- TODO: make sure the src below is correct --}}
 <script src="../public/js/lobby.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
