--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,81 +1,112 @@
-<div class ="container">
+<div class="container">
+        <h1 class="font-effect-shadow-multiple"> Let's play Chess!</h1>
         <div class = "row">
-            <div class="col-8">
+            <div class = "col-7" id="form">
+                <form id="login-form">
                     <div class="card">
-                        <h1>{{username}}</h1>
-                        <h3>Total Games Played: {{ngames}}</h3>
-                        <h5>Wins: {{wins}}</h5>
-                        <p>Losses: {{losses}}</p>
-                        <p>Ties: {{ties}}</p>
-                        <p>Win/loss: {{winloss}}</p>
-                        <button id="play-btn">PLAY GAME</button>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#notificationModal" id="open-notification-modal">
-                            Notifications
-                        </button>
+                        <h2 id="username">{{username}}/h2>
+                        <!-- <h2></h2> -->
+                        <h3>Total Games Played:</h3>
+                        <h2>{{ngames}}</h2>
+                        <!--  -->
+                        <table class="table table-sm table-dark text-center mb-5">
+                            <thead>
+                            <tr>
+                                <th scope="col"><h5>Wins: </h5></th>
+                                <th scope="col"><h5>Loses: </h5></th>
+                                <th scope="col"><h5>Ties: </h5></th>
+                                <th scope="col"><h5>Win/loss: </h5></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>{{wins}} </td>
+                                <td> {{losses}}</td>
+                                <td>{{ties}}</td>
+                                <td>{{winloss}}</td>
+                            </tr>
+                            </tbody>
+                        </table>
+
                     </div>
+                </form>
+                <button type="submit" class="btn btn-primary btn-lg btn-block mt-3"> PLAY GAME</button>
             </div>
-    
-            <div class="col-4">
-                <ul id="friends-list">
-                {{#each friend}}
-                <li>{{friend_username}}</li>
-                {{/each}}
+            <div class="col-1"></div>
+            <div class="col-4 rounded" id="friends-box">
+                <ul class="list-group mt-3 mr-2 ml-2 rounded">
+                    {{#each friend}} 
+                            <li class="list-group-item mb-3 list-group-item-action" class="friends-list">{{friend_username}}</li>
+                    {{/each}}
                 </ul>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addFriendModal" id="open-modal">
-                    Add Friend
-                </button>
+                <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#addFriendModal" id="open-modal"> Add Friend </button>
             </div>
         </div>
-    </div>
-    <!-- Add Friend Modal -->
-    <div class="modal fade" id="addFriendModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Add a Friend</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p class="not-frs">Enter your friend's email:</p>
-                    <input class="not-frs" type="text" id="friend-email" value="friends email">
-                    <button type="button" class="btn btn-primary not-frs" id="add-friend-btn">Add Friend</button>
-                    <p id="frs">Friend Request Sent!</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
+        
     </div>
 
-    <!-- Notification Modal -->
-    <div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+     <!-- Modal -->
+    <div class="modal fade" id="addFriendModal" tabindex="-1" role="dialog" aria-labelledby="addFriendModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Notifications</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div id="friend-request-div">
-                        <h4>Friend Requests</h4>
-                        <ul id="friend-request-list"></ul>
-                    </div>
-                    <div id="game-invite-div">
-                        <h4>Game Invites</h4>
-                        <ul id="game-invite-list"></ul>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="addFriendModalLabel"> Add a Friend </h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
             </div>
+            <div class="modal-body">
+                <form id="login-form">
+                    
+                    <label for="emaillogin" class="form-label">Enter your friend's email</label>
+                    <input type="text" class="form-control" id="email-login" placeholder = "Email">
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">Add Friend</button>
+                    <p id="frs">Friend Request Sent!</p>
+                </form>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+        </div>
+        </div>
+        
+        <!-- Button notif modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#notifModal"> Notifications </button>
+    <!-- Modal -->
+    <div class="modal fade" id="notifModal" tabindex="-1" role="dialog" aria-labelledby="notifModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="notifModalLabel"> Notifications </h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+                <form id="notif-form">
+                    <h3>Friend Request</h3>
+                    <ul class="list-group">
+                        
+                    </ul>
+                    <hr>
+                    <h3>Game Invite</h3>
+                    <ul class="list-group">
+                        
+                    </ul>
+
+                </form>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     {{!-- TODO: make sure the src below is correct --}}
     <script src="/public/js/user.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
