--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -24,7 +24,7 @@
                     <input type="text" class="form-control" id="email-signup" placeholder = "email">
 
                     <label for="usernamesignup" class="form-label">User name</label>
-                    <input type="text" class="form-control" id="username-signup" placeholder = "email">
+                    <input type="text" class="form-control" id="username-signup" placeholder = "username">
 
                     <label for="passwordsignup" class="form-label">Password</label>
                     <input type="text" class="form-control" id="password-signup" placeholder ="password">
