having fun yet?

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -30,7 +30,7 @@
 
                     </div>
                 </form>
-                <button type="submit" class="btn btn-primary btn-lg btn-block mt-3"> PLAY GAME</button>
+                <button type="submit" class="btn btn-primary btn-lg btn-block mt-3" id="play-btn"> PLAY GAME</button>
             </div>
             <div class="col-1"></div>
             <div class="col-4 rounded" id="friends-box">
