added client side friend request

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -60,7 +60,7 @@
                     
                     <label for="emaillogin" class="form-label">Enter your friend's email</label>
                     <input type="text" class="form-control" id="email-login" placeholder = "Email">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Add Friend</button>
+                    <button type="submit" class="btn btn-primary btn-lg btn-block" id="add-friend-btn">Add Friend</button>
                     <p id="frs">Friend Request Sent!</p>
                 </form>
             </div>
