--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -86,7 +86,7 @@
             <div class="modal-body">
                 <form id="notif-form">
                     <h3>Friend Request</h3>
-                    <ul class="list-group">
+                    <ul class="list-group" id="friend-request-list">
                         
                     </ul>
                     <hr>
