--- a/views/lobby.handlebars
+++ b/views/lobby.handlebars
@@ -1,12 +1,12 @@
 <div class="container border border-primary rounded-lg" id="lobby-page">
         <form id="login-form" class="rounded mt-5 mb-5 mr-5 ml-5">
 
-            <h2 id="users">{{host_username}}</h2>
+            <h2 id="users">{{username}}</h2>
             <h3>White</h3>
             <input type="text" class="form-control-lg col-md-6 offset-md-3" id="host-username" placeholder = "Enter your username">
 
             <!-- <h2></h2> -->
-            <h2 id="users">{{opponent_username}}</h2>
+            <h2 id="users">empty</h2>
             <h3>Black</h3>
             <input type="text" class="form-control-lg col-md-6 offset-md-3 mb-5" id="friend-username" placeholder ="Enter your Friend's Username">
 
