stuff things cool

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -91,10 +91,9 @@
                     </ul>
                     <hr>
                     <h3>Game Invite</h3>
-                    <ul class="list-group">
+                    <ul class="list-group" id="game-invite-list">
                         
                     </ul>
-
                 </form>
             </div>
             <div class="modal-footer">
