--- a/views/lobby.handlebars
+++ b/views/lobby.handlebars
@@ -3,13 +3,9 @@
 
             <h2 id="users">{{username}}</h2>
             <h3>White</h3>
-            <input type="text" class="form-control-lg col-md-6 offset-md-3" id="host-username" placeholder = "Enter your username">
-
             <!-- <h2></h2> -->
-            <h2 id="users">empty</h2>
+            <h2 id="users2">empty</h2>
             <h3>Black</h3>
-            <input type="text" class="form-control-lg col-md-6 offset-md-3 mb-5" id="friend-username" placeholder ="Enter your Friend's Username">
-
             
         </form>
         <div class="row" id="buttons">
