added most of lobby functionality

--- a/views/lobby-guest.handlebars
+++ b/views/lobby-guest.handlebars
@@ -9,6 +9,6 @@
     </div>
 <script src="/socket.io/socket.io.js"></script>
 {{!-- TODO: make sure the src below is correct --}}
-<script src="/js/lobby.js"></script>
+<script src="/js/lobby-guest.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
