--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -7,7 +7,7 @@
                         <h2 id="username">{{username}}</h2>
                         <!-- <h2></h2> -->
                         <h2 id ="totgam">Total Games Played:</h2>
-                        <h3 id="ngames-played"></h3>>{{ngames}}</h3>
+                        <h3 id="ngames-played">{{ngames}}</h3>
                         <!--  -->
                         <table class="table text-center mb-5">
                             <thead>
@@ -20,10 +20,10 @@
                             </thead>
                             <tbody>
                             <tr class="bottom">
-                                <td><!-- {{wins}} --> 7</td>
-                                <td><!-- {{loses}} --> 3</td>
-                                <td><!-- {{ties}} --> 0</td>
-                                <td><!-- {{winloss}} --> 7/3</td>
+                                <td>{{wins}}</td>
+                                <td>{{losses}}</td>
+                                <td>{{ties}}</td>
+                                <td>{{winloss}}</td>
                             </tr>
                             </tbody>
                         </table>
@@ -103,7 +103,6 @@
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
-    {{!-- TODO: make sure the src below is correct --}}
     <script src="/js/user.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
